fixes bold header on smaller screens

--- a/public/stylesheets/landingPage.css
+++ b/public/stylesheets/landingPage.css
@@ -135,7 +135,6 @@
     font-size: 44px;
     font-weight 500;
     margin-top: 30px;
-    font-weight: bold;
   }
 
   .left h2 {
